correção para criar elemento dinamicamente

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 
      <article id="main-boards" class="boards">
 
+          <section class="board is--hidden">
+               <h3>Titulo Card Espelho</h3>
+               <div class="dropzone">
+               </div>
+
+               <div class="buttons-action">
+                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
+               </div>
+          </section>
+
           <section class="board">
                <h3>Titulo Card</h3>
                <div class="dropzone">
