adicionando elemento de adicionar item dinamico

--- a/index.html
+++ b/index.html
@@ -35,50 +35,7 @@
 
      <article id="main-boards" class="boards">
 
-          <section class="board is--hidden">
-               <h3>Titulo Card Espelho</h3>
-               <div class="dropzone">
-               </div>
-
-               <div class="buttons-action">
-                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
-               </div>
-          </section>
-
-          <section class="board">
-               <h3>Titulo Card</h3>
-               <div class="dropzone">
-                    <div class="card" draggable="true">
-                         <div class="content">
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit 1.</p>
-                         </div>
-                    </div>
-
-                    <div class="card" draggable="true">
-                         <div class="content">
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit 10.</p>
-                         </div>
-                    </div>
-
-                    <div class="card" draggable="true">
-                         <div class="content">
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit 11.</p>
-                         </div>
-                    </div>
-
-                    <div class="card" draggable="true">
-                         <div class="content">
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit 12.</p>
-                         </div>
-                    </div>
-               </div>
-
-               <div class="buttons-action">
-                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
-               </div>
-
-          </section>
-
+         
           <section class="board">
                <h3>Titulo Card</h3>
                <div class="dropzone">
@@ -89,8 +46,10 @@
                     </div>
                </div>
 
+               <span class="add-item-list" title="Adicionar item"><i class="fas fa-plus icon-add-item"></i>adicionar item</span> 
+
                <div class="buttons-action">
-                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
+                    <button class="b-remove-item b-action-item"> <i class="fas fa-trash-alt"></i> <span>Excluir cartão</span></button>
                </div>
 
           </section>
@@ -105,8 +64,10 @@
                     </div>
                </div>
 
+               <span class="add-item-list" title="Adicionar item"><i class="fas fa-plus icon-add-item"></i>adicionar item</span> 
+
                <div class="buttons-action">
-                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
+                    <button class="b-remove-item b-action-item"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
                </div>
           </section>
 
@@ -126,8 +87,10 @@
                     </div>
                </div>
 
+               <span class="add-item-list" title="Adicionar item"><i class="fas fa-plus icon-add-item"></i>adicionar item</span> 
+               
                <div class="buttons-action">
-                    <button class="b-remove-card"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
+                    <button class="b-remove-item b-action-item"> <i class="fas fa-trash-alt"></i> Excluir cartão</button>
                </div>
           </section>
 
